--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -52,6 +52,18 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="Btn_Text_Icon" parent="Widget.MaterialComponents.Button.TextButton.Icon">
+        <item name="android:textAllCaps">false</item>
+        <item name="cornerRadius">@dimen/radius_md</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/neutral_900</item>
+        <item name="android:textAlignment">textStart</item>
+        <item name="iconPadding">@dimen/elmnt_gap_md</item>
+        <item name="iconTint">@color/neutral_900</item>
+        <item name="iconSize">@dimen/ic_sm</item>
+
+    </style>
+
     <style name="Btn_Back" parent="Widget.AppCompat.ImageButton">
         <item name="android:layout_width">@dimen/circle_lg</item>
         <item name="android:layout_height">@dimen/circle_lg</item>
@@ -270,6 +282,11 @@
     <style name="Dlg_Fullscreen" parent="Theme.AppCompat.Dialog">
         <item name="android:windowFullscreen">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
+  <!-- Base application theme. -->
+    <style name="Base.Theme.Hygeia" parent="Theme.Material3.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
 </resources>
