--- a/app/src/main/res/drawable/bg_circle_50.xml
+++ b/app/src/main/res/drawable/bg_circle_50.xml
@@ -2,13 +2,15 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="?android:attr/colorControlHighlight">
     <item android:id="@android:id/mask">
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <solid android:color="@color/ripple_primary" />
+            <corners android:radius="@dimen/radius_md" />
         </shape>
     </item>
     <item android:id="@android:id/background">
-        <shape android:shape="oval">
+        <shape android:shape="rectangle">
             <solid android:color="@color/accent_50" />
+            <corners android:radius="@dimen/radius_md" />
         </shape>
     </item>
 </ripple>
