--- a/app/src/main/res/layout/act_change_password.xml
+++ b/app/src/main/res/layout/act_change_password.xml
@@ -2,9 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/mainLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".ActChangePassword">
 
     <ImageButton
         android:id="@+id/btnBack"
@@ -13,29 +13,10 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
-    <com.google.android.material.progressindicator.LinearProgressIndicator
-        style="@style/Progress_Linear"
-        android:layout_height="2dp"
-        android:max="100"
-        android:progress="66"
-        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnBack" />
-
-    <TextView
-        android:id="@+id/lblPageNumber"
-        style="@style/Text_Page_Number"
-        android:fontFamily="@font/roboto_bold"
-        android:text="@string/pg_num_2"
-        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnBack" />
-
     <TextView
         android:id="@+id/lblHeadingRegular"
         style="@style/Text_H1_Regular"
-        android:text="@string/h1_create_account2"
+        android:text="@string/h1_change_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -43,7 +24,7 @@
     <TextView
         android:id="@+id/lblHeadingColored"
         style="@style/Text_H1_Colored"
-        android:text="@string/h1_protected_colored"
+        android:text="@string/h1_password_colored"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblHeadingRegular" />
@@ -51,47 +32,30 @@
     <TextView
         android:id="@+id/lblDescription"
         style="@style/Text_Description"
-        android:text="@string/desc_create_account_part2"
+        android:text="@string/desc_update_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblHeadingColored" />
+        app:layout_constraintTop_toBottomOf="@+id/lblHeadingColored"
+        tools:ignore="VisualLintLongText" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtLayoutEmail"
+        android:id="@+id/txtLayoutOldPassword"
         style="@style/Txt_Layout_Primary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/title_email"
+        android:hint="@string/title_password_old"
         android:layout_marginTop="@dimen/elmnt_gap_xl"
+        app:endIconDrawable="@drawable/ic_eye_selector"
+        app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblDescription">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txtEmail"
+            android:id="@+id/txtOldPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
-            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtLayoutPhoneNumber"
-        style="@style/Txt_Layout_Primary"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:hint="@string/title_phone_number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtLayoutEmail"
-        app:prefixText="+63">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txtPhoneNumber"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="number"
-            android:maxLength="10"
+            android:inputType="textPassword"
             tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -100,12 +64,12 @@
         style="@style/Txt_Layout_Primary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/title_password"
+        android:hint="@string/title_password_new"
         app:endIconDrawable="@drawable/ic_eye_selector"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtLayoutPhoneNumber">
+        app:layout_constraintTop_toBottomOf="@+id/txtLayoutOldPassword">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtPassword"
@@ -136,10 +100,10 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btnContinue"
+        android:id="@+id/btnUpdatePassword"
         style="@style/Btn_Primary"
         android:layout_width="match_parent"
-        android:text="@string/btn_continue"
+        android:text="@string/btn_update_password"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
