--- a/app/src/main/res/layout/act_send_money.xml
+++ b/app/src/main/res/layout/act_send_money.xml
@@ -14,91 +14,67 @@
         tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
 
     <TextView
-        android:id="@+id/lblPageTitle"
-        style="@style/Lbl_PageTitle"
-        android:layout_height="wrap_content"
-        android:text="@string/page_title_send_money"
-        app:layout_constraintBottom_toBottomOf="@+id/btnBack"
+        android:id="@+id/lblHeadingRegular"
+        style="@style/Text_H1_Regular"
+        android:text="@string/h1_send_money"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/btnBack" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/balanceLayout"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/elmnt_y"
-        android:layout_marginStart="@dimen/mx"
-        android:layout_marginTop="@dimen/h_mt"
-        android:layout_marginEnd="@dimen/mx"
-        android:background="@drawable/bg_squircle_50"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <ImageView
-            android:id="@+id/imgWallet"
-            style="@style/Circle_Md_500"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="0dp"
-            android:layout_marginBottom="0dp"
-            android:padding="6dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_wallet"
-            tools:ignore="ContentDescription" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/lblEnterDetails"
-        style="@style/Text_Regular"
-        android:layout_marginTop="16dp"
-        android:text="@string/title_enter_required"
-        app:layout_constraintEnd_toEndOf="@+id/balanceLayout"
-        app:layout_constraintStart_toStartOf="@+id/balanceLayout"
-        app:layout_constraintTop_toBottomOf="@+id/balanceLayout" />
+        android:id="@+id/lblDescription"
+        style="@style/Text_Description"
+        android:text="@string/desc_send_money"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblHeadingRegular"
+        tools:ignore="VisualLintLongText" />
 
-    <EditText
-        android:id="@+id/txtPhoneNumber"
-        style="@style/Txt_Primary"
-        android:autofillHints=""
-        android:hint="@string/hint_phone_number"
-        android:inputType="number"
-        android:maxLength="11"
-        app:layout_constraintEnd_toEndOf="@+id/lblEnterDetails"
-        app:layout_constraintStart_toStartOf="@+id/lblEnterDetails"
-        app:layout_constraintTop_toBottomOf="@+id/lblEnterDetails"
-        tools:ignore="TextFields,VisualLintTextFieldSize" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txtLayoutPhoneNumber"
+        style="@style/Txt_Layout_Primary"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/title_phone_number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblDescription"
+        android:layout_marginTop="@dimen/elmnt_gap_xl"
+        app:prefixText="+63">
 
-    <EditText
-        android:id="@+id/txtAmount"
-        style="@style/Txt_Primary"
-        android:autofillHints=""
-        android:hint="@string/hint_amount"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="@+id/txtPhoneNumber"
-        app:layout_constraintStart_toStartOf="@+id/txtPhoneNumber"
-        app:layout_constraintTop_toBottomOf="@+id/txtPhoneNumber"
-        tools:ignore="TextFields,VisualLintTextFieldSize" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txtPhoneNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            android:maxLength="10"
+            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
+    </com.google.android.material.textfield.TextInputLayout>
 
-    <EditText
-        android:id="@+id/txtMessage"
-        style="@style/Txt_Primary"
-        android:autofillHints=""
-        android:hint="@string/hint_message_optional"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="@+id/txtAmount"
-        app:layout_constraintStart_toStartOf="@+id/txtAmount"
-        app:layout_constraintTop_toBottomOf="@+id/txtAmount"
-        tools:ignore="TextFields,VisualLintTextFieldSize" />
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/txtLayoutAmount"
+        style="@style/Txt_Layout_Primary"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="@string/title_amount"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/txtLayoutPhoneNumber"
+        app:prefixText="₱">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/txtAmount"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="number"
+            tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
+    </com.google.android.material.textfield.TextInputLayout>
 
     <Button
-        android:id="@+id/btnSendMoney"
+        android:id="@+id/btnContinue"
         style="@style/Btn_Primary"
         android:layout_width="match_parent"
-        android:enabled="false"
-        android:text="@string/btn_send_money"
+        android:text="@string/btn_continue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
