--- a/app/src/main/res/layout/dlg_otp.xml
+++ b/app/src/main/res/layout/dlg_otp.xml
@@ -64,11 +64,11 @@
             android:layout_marginTop="@dimen/elmnt_gap_lg"
             android:layout_marginEnd="1dp"
             android:hint="@string/title_otp"
-            app:endIconMode="custom"
-            app:endIconDrawable="@drawable/ic_reload"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/lblDlgOtpBody">
+        <!--app:endIconMode="custom"-->
+        <!--app:endIconDrawable="@drawable/ic_reload"-->
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txtDlgOtp"
