--- a/app/src/main/res/layout/frg_admin_tools.xml
+++ b/app/src/main/res/layout/frg_admin_tools.xml
@@ -6,22 +6,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <TextView
-        android:id="@+id/lblHeadingRegular"
+        android:id="@+id/lblForgotPasswordHeading"
         style="@style/Text_H1_Regular"
-        android:layout_marginTop="@dimen/mx"
-        android:text="@string/h1_all_transactions"
+        android:layout_marginTop="24dp"
+        android:text="@string/h1_vending_machines"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/lblDescription"
-        style="@style/Text_Description"
-        android:text="@string/desc_transaction_history"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listMachines"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="@dimen/mx"
+        android:layout_marginTop="@dimen/elmnt_gap_xl"
+        android:layout_marginEnd="@dimen/mx"
+        android:layout_marginBottom="56dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblHeadingRegular"
-        tools:ignore="VisualLintLongText" />
+        app:layout_constraintTop_toBottomOf="@+id/lblForgotPasswordHeading" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
