--- a/app/src/main/res/layout/frg_forgot_password.xml
+++ b/app/src/main/res/layout/frg_forgot_password.xml
@@ -38,53 +38,22 @@
         app:layout_constraintTop_toBottomOf="@+id/lblForgotPasswordHeading2"
         tools:ignore="VisualLintLongText" />
 
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:id="@+id/containerDescription"-->
-<!--        style="@style/Container_Description"-->
-<!--        android:padding="@dimen/container_desc_p"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/lblForgotPasswordHeading2">-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/imgDescription"-->
-<!--            android:layout_width="@dimen/ic_sm"-->
-<!--            android:layout_height="@dimen/ic_sm"-->
-<!--            android:src="@drawable/ic_info"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/lblDescription"-->
-<!--            style="@style/Text_Regular"-->
-<!--            android:layout_marginStart="@dimen/text_desc_ml"-->
-<!--            android:text="@string/desc_forgot_password"-->
-<!--            android:textColor="@color/neutral_900"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/imgDescription"-->
-<!--            app:layout_constraintTop_toTopOf="parent" />-->
-
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
-
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/txtLayoutEmail"
+        android:id="@+id/txtLayoutEmailOrPhoneNumber"
         style="@style/Txt_Layout_Primary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/title_email"
+        android:hint="@string/title_email_phone_number"
         android:layout_marginTop="@dimen/elmnt_gap_xl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblDescription">
-<!--        app:helperTextEnabled="true"-->
-<!--        app:helperText="@string/helper_forgot_password_email">-->
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/txtEmail"
+            android:id="@+id/txtEmailOrPhoneNumber"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"
+            android:inputType="text"
             tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
     </com.google.android.material.textfield.TextInputLayout>
 
