--- a/app/src/main/res/layout/frg_admin_tools.xml
+++ b/app/src/main/res/layout/frg_admin_tools.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/lblForgotPasswordHeading"
+        android:id="@+id/lblHeadingRegular"
         style="@style/Text_H1_Regular"
         android:layout_marginTop="24dp"
         android:text="@string/h1_vending_machines"
@@ -15,8 +15,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/lblDescription"
+        style="@style/Text_Description"
+        android:text="@string/desc_vending_machines"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblHeadingRegular"
+        tools:ignore="VisualLintLongText" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listMachines"
+        android:id="@+id/listViewMachines"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="@dimen/mx"
@@ -26,7 +35,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblForgotPasswordHeading" />
+        app:layout_constraintTop_toBottomOf="@+id/lblDescription"
+        tools:listitem="@layout/list_machine"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
