--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -22,7 +22,7 @@
         tools:layout="@layout/frg_main_settings"/>
     <fragment
         android:id="@+id/frgMainAdminTools"
-        android:name="com.hygeia.FrgAdminTools"
+        android:name="com.hygeia.fragments.FrgAdminTools"
         android:label="frg_admin_tools"
         tools:layout="@layout/frg_admin_tools" />
 </navigation>
