--- a/app/src/main/res/layout/act_send_money.xml
+++ b/app/src/main/res/layout/act_send_money.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ActSendMoney">
+    tools:context=".ActSendMoney"
+    android:id="@+id/mainLayout">
 
     <ImageButton
         android:id="@+id/btnBack"
@@ -60,7 +61,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtLayoutPhoneNumber"
-        app:prefixText="₱">
+        app:prefixText="₱"
+        app:helperText="">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtAmount"
