--- a/app/src/main/res/layout/act_notifications.xml
+++ b/app/src/main/res/layout/act_notifications.xml
@@ -23,4 +23,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnBack" />
 
+    <Button
+        android:id="@+id/btnNotifyMe"
+        style="@style/Btn_Primary"
+        android:layout_width="match_parent"
+        android:layout_marginBottom="76dp"
+        android:text="@string/notify_me"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:ignore="VisualLintButtonSize" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
